Prepare auth-conformance 0.1.1
